cmake_minimum_required(VERSION 3.14)
project(Programming_Exercises C)

set(CMAKE_C_STANDARD 99)

add_executable(Programming_Exercises1 1.c 1.c 2.c 3.c 4.c 5.c 5.1.c 6.c 7.c 8.c 9.c 10.c)
add_executable(Programming_Exercises2 2.c)
add_executable(Programming_Exercises3 3.c)
add_executable(Programming_Exercises4 4.c)
add_executable(Programming_Exercises5 5.c)
add_executable(Programming_Exercises5.1 5.1.c)
add_executable(Programming_Exercises6 6.c)
add_executable(Programming_Exercises7 7.c)
add_executable(Programming_Exercises8 8.c)
add_executable(Programming_Exercises9 9.c)
add_executable(Programming_Exercises10 10.c)