cmake_minimum_required(VERSION 3.13)
project(list C)

set(CMAKE_C_STANDARD 99)

add_executable(list summing.c)
add_executable(list2 when.c)
add_executable(list3 while2.c)
add_executable(list6.5 cmpflt.c)
add_executable(list6.6 t_and_f.c)
add_executable(list6.7 truth.c)
add_executable(list6.8 trouble.c)
add_executable(list6.9 boolean.c)