cmake_minimum_required(VERSION 3.15)
project(Review_Question C)

set(CMAKE_C_STANDARD 99)

add_executable(Review_Question1weight.c weight.c)
add_executable(Review_Question5.c 5.c)
add_executable(Review_Question6.c 6.c)
add_executable(Review_Question7.c 7.c)
add_executable(Review_Question8.c 8.c)
add_executable(Review_Question9.c 9.c)