cmake_minimum_required(VERSION 3.14)
project(list C)

set(CMAKE_C_STANDARD 99)

add_executable(list7.1 colddays.c cypher2.c wordcnt.c)
add_executable(list7.2 cypher1.c cypher1.c)
add_executable(list7.3 cypher2.c cypher2.c)
add_executable(list7.4 electric.c)
add_executable(list7.5 divisors.c divisors.c)
add_executable(list7.6 chcount.c chcount.c)
add_executable(list7.7 wordcnt.c)
add_executable(list7.8 "the paint.c")
