cmake_minimum_required(VERSION 3.14)
project(list C)

set(CMAKE_C_STANDARD 99)

add_executable(list7.1 colddays.c)
add_executable(list7.2 cypher1.c cypher1.c)
add_executable(list7.3 cypher2.c cypher2.c)
add_executable(list7.4 electric.c)
add_executable(list7.5 divisors.c divisors.c)
add_executable(list7.6 chcount.c chcount.c)
add_executable(list7.7 wordcnt.c)
add_executable(list7.8 "the paint.c")
add_executable(list7.9 skippart.c)
add_executable(exercise1 count.c)
add_executable(exercise2 for.c)
add_executable(list7.10break.c break.c)
add_executable(exercise3 "exercise3 break.c")
add_executable(list7.11animals.c animals.c)
add_executable(exercise4fanhui return.c)
add_executable(list7.12vowels.c vowels.c)