cmake_minimum_required(VERSION 3.15)
project(programming_Exercises C)

set(CMAKE_C_STANDARD 99)

add_executable(programming_Exercises exercise1.c exercise1.c)
add_executable(programming_Exercises1.1.c exercises1.1.c)
add_executable(Programming_Exercises2.c exercise2.c)
add_executable(Programming_Exercises3.c exercise3.c)